@@ -8,6 +8,7 @@
 #include <tuple>
 #include <type_traits>
 
+#include "Val.h"
 #include "Dict.h"
 #include "Timer.h"
 #include "Rule.h"
@@ -29,8 +30,6 @@ class RuleHdrTest;
 class Specific_RE_Matcher;
 class RuleEndpointState;
 class EncapsulationStack;
-class Val;
-class RecordVal;
 
 namespace analyzer { class TransportLayerAnalyzer; }
 
@@ -59,7 +58,7 @@ static inline int addr_port_canon_lt(const IPAddr& addr1, uint32_t p1,
 
 namespace analyzer { class Analyzer; }
 
-class Connection final : public BroObj {
+class Connection final : public RecordVal {
 public:
 	Connection(NetSessions* s, const ConnIDKey& k, double t, const ConnID* id,
 	           uint32_t flow, const Packet* pkt, const EncapsulationStack* arg_encap);
@@ -167,9 +166,10 @@ public:
 	RecordVal* BuildConnVal();
 
 	/**
-	 * Returns the associated "connection" record.
+	 * Returns the associated "connection" record with all fields
+	 * populated and up-to-date.
 	 */
-	const IntrusivePtr<RecordVal>& ConnVal();
+	IntrusivePtr<RecordVal> ConnVal();
 
 	void AppendAddl(const char* str);
 
@@ -263,7 +263,7 @@ public:
 	// Statistics.
 
 	// Just a lower bound.
-	unsigned int MemoryAllocation() const;
+	unsigned int MemoryAllocation() const override;
 	unsigned int MemoryAllocationConnVal() const;
 
 	static uint64_t TotalConnections()
@@ -342,6 +342,7 @@ protected:
 	NetSessions* sessions;
 	ConnIDKey key;
 	bool key_valid;
+	bool populated = false;
 
 	timer_list timers;
 
@@ -355,7 +356,6 @@ protected:
 	u_char resp_l2_addr[Packet::l2_addr_len];	// Link-layer responder address, if available
 	double start_time, last_time;
 	double inactivity_timeout;
-	IntrusivePtr<RecordVal> conn_val;
 	LoginConn* login_conn;	// either nil, or this
 	const EncapsulationStack* encapsulation; // tunnels
 	int suppress_event;	// suppress certain events to once per conn.
